Refactor package path and replace `collect(Collectors.toList())` with `toList()` in `ComplaintRepositoryAdapter`